Update project name to Studio UUUL and fix education text spacing

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 
     <!-- Basic info -->
     <meta name="author" content="donggundg, yaro">
-    <meta name="description" content="Studio Oolchang" />
-    <meta name="keywords" content="movie, studio, oolchang">
+    <meta name="description" content="Studio UUUL" />
+    <meta name="keywords" content="movie, studio, uuul">
 
 
     <!-- favicon -->
@@ -17,7 +17,7 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <!-- title -->
-    <title>Studio Oolchang</title>
+    <title>Studio UUUL</title>
   </head>
   <body>
     <div id="root"></div>
