--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/android-icon-48x48.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=1200, initial-scale=1, user-scalable=yes" />
     <meta name="theme-color" content="#000000" />
 
     <!-- Basic info -->
